--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,11 @@
         android:theme="@style/Theme.MainPage"
         tools:targetApi="31">
         <activity
+            android:name=".ShowDetails"
+            android:exported="false" />
+        <activity
             android:name=".Accomdation"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
